pre randomarks build

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,9 @@
   "browser_action": {
     "default_icon": "icon.png"
   },
+  "icons":{
+    "64":"icon.png"
+  },
   "background_page":"background.html",
   "options_page":"options.html",
   "permissions": [
